--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "app-name",
   "version": "0.1.0",
   "private": true,
-  "resolutions": {
-    "styled-components": "^5"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -20,10 +18,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26"
-  }
+  "devDependencies": {}
 }
